Fix sonar issues (#81)
* fix issues

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix issues

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix issues

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* add tests

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix test for multiple OS

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* add test

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

---------

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>